--- a/ogre.cfg
+++ b/ogre.cfg
@@ -3,8 +3,8 @@ Render System=OpenGL Rendering Subsystem
 [OpenGL Rendering Subsystem]
 Display Frequency=60 MHz
 FSAA=4
-Full Screen=Yes
+Full Screen=No
 RTT Preferred Mode=FBO
 VSync=No
-Video Mode=1600 x  900
+Video Mode= 800 x  600
 sRGB Gamma Conversion=No
