--- a/ogre.cfg
+++ b/ogre.cfg
@@ -3,8 +3,8 @@ Render System=OpenGL Rendering Subsystem
 [OpenGL Rendering Subsystem]
 Display Frequency=60 MHz
 FSAA=4
-Full Screen=No
+Full Screen=Yes
 RTT Preferred Mode=FBO
 VSync=No
-Video Mode= 800 x  600
+Video Mode=1600 x  900
 sRGB Gamma Conversion=No
