new branch - working on coordinates

--- a/resources.cfg
+++ b/resources.cfg
@@ -9,3 +9,4 @@ FileSystem=/usr/share/OGRE-1.7.4/media/materials/programs/
 FileSystem=/usr/share/OGRE-1.7.4/media/packs/SdkTrays/
 FileSystem=./ressources/materials/
 FileSystem=./ressources/textures/
+FileSystem=./ressources/particles/
