--- a/ogre.cfg
+++ b/ogre.cfg
@@ -1,10 +1,28 @@
 Render System=OpenGL Rendering Subsystem
 
-[OpenGL Rendering Subsystem]
-Display Frequency=60 MHz
-FSAA=4
+[Direct3D9 Rendering Subsystem]
+Allow NVPerfHUD=No
+FSAA=0
+Fixed Pipeline Enabled=Yes
+Floating-point mode=Fastest
 Full Screen=Yes
+Multi device memory hint=Use minimum system memory
+Rendering Device=Monitor-1-ATI Mobility Radeon HD 5145
+Resource Creation Policy=Create on all devices
+Use Multihead=Auto
+VSync=No
+VSync Interval=1
+Video Mode=800 x 600 @ 32-bit colour
+sRGB Gamma Conversion=No
+
+[OpenGL Rendering Subsystem]
+Colour Depth=32
+Display Frequency=N/A
+FSAA=4
+Fixed Pipeline Enabled=Yes
+Full Screen=No
 RTT Preferred Mode=FBO
 VSync=No
-Video Mode=1920 x 1080
+VSync Interval=1
+Video Mode=640 x 480
 sRGB Gamma Conversion=No
