--- a/ressources/etc/win_resources_d.cfg
+++ b/ressources/etc/win_resources_d.cfg
@@ -25,6 +25,7 @@ FileSystem=./
 
 FileSystem=./ressources/materials/
 FileSystem=./ressources/meshes/
+FileSystem=./ressources/particles/
 FileSystem=./ressources/textures/
 #Zip=../../media/packs/cubemap.zip
 #Zip=../../media/packs/cubemapsJS.zip
@@ -41,3 +42,15 @@ FileSystem=../../media
 # Materials for visual tests
 [Tests]
 FileSystem=../../media/../../Tests/Media
+
+#Stuff for CEGUI
+[Imagesets]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/imagesets
+[Fonts]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/fonts
+[Schemes]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/schemes
+[LookNFeel]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/looknfeel
+[Layouts]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/layouts
