removed verbose output of ordniates

--- a/ressources/etc/win_resources_d.cfg
+++ b/ressources/etc/win_resources_d.cfg
@@ -25,6 +25,7 @@ FileSystem=./
 
 FileSystem=./ressources/materials/
 FileSystem=./ressources/meshes/
+FileSystem=./ressources/particles/
 FileSystem=./ressources/textures/
 #Zip=../../media/packs/cubemap.zip
 #Zip=../../media/packs/cubemapsJS.zip
