Got that stuff working on linux \o/

--- a/ressources/etc/resources_d.cfg
+++ b/ressources/etc/resources_d.cfg
@@ -1,11 +1,25 @@
 # Resource locations to be added to the default path
 [General]
 FileSystem=/usr/share/OGRE-1.7.4/media/
-FileSystem=/usr/share/OGRE-1.7.4/media/materials
-FileSystem=/usr/share/OGRE-1.7.4/media/materials/scripts
-FileSystem=/usr/share/OGRE-1.7.4/media/textures
-FileSystem=/usr/share/OGRE-1.7.4/media/models
+FileSystem=/usr/share/OGRE-1.7.4/media/materials/
+FileSystem=/usr/share/OGRE-1.7.4/media/materials/scripts/
+FileSystem=/usr/share/OGRE-1.7.4/media/textures/
+FileSystem=/usr/share/OGRE-1.7.4/media/models/
 FileSystem=/usr/share/OGRE-1.7.4/media/materials/programs/
 FileSystem=/usr/share/OGRE-1.7.4/media/packs/SdkTrays/
 FileSystem=./ressources/materials/
 FileSystem=./ressources/textures/
+FileSystem=./ressources/particles/
+FileSystem=./ressources/meshes/
+
+#Stuff for CEGUI
+[Imagesets]
+FileSystem=~/CEGUI-0.7.9/datafiles/imagesets/
+[Fonts]
+FileSystem=~/CEGUI-0.7.9/datafiles/fonts/
+[Schemes]
+FileSystem=~/CEGUI-0.7.9/datafiles/schemes/
+[LookNFeel]
+FileSystem=~/CEGUI-0.7.9/datafiles/looknfeel/
+[Layouts]
+FileSystem=~/CEGUI-0.7.9/datafiles/layouts/
