Introduced the GUI System, testing Object Indicators

--- a/ressources/etc/win_resources.cfg
+++ b/ressources/etc/win_resources.cfg
@@ -1,7 +1,7 @@
 # Resources required by the sample browser and most samples.
 [Essential]
-Zip=../../media/packs/SdkTrays.zip
-Zip=../../media/packs/profiler.zip
+Zip=./ressources/packs/SdkTrays.zip
+Zip=./ressources/packs/profiler.zip
 FileSystem=../../media/thumbnails
 
 # Common sample resources needed by many of the samples.
@@ -22,14 +22,20 @@ FileSystem=../../media/RTShaderLib/materials
 FileSystem=../../media/materials/scripts/SSAO
 FileSystem=../../media/materials/textures/SSAO
 FileSystem=./
-Zip=../../media/packs/cubemap.zip
-Zip=../../media/packs/cubemapsJS.zip
-Zip=../../media/packs/dragon.zip
-Zip=../../media/packs/fresneldemo.zip
-Zip=../../media/packs/ogretestmap.zip
-Zip=../../media/packs/ogredance.zip
-Zip=../../media/packs/Sinbad.zip
-Zip=../../media/packs/skybox.zip
+
+FileSystem=./ressources/materials/
+FileSystem=./ressources/meshes/
+FileSystem=./ressources/particles/
+FileSystem=./ressources/textures/
+FileSystem=./ressources/fonts/
+#Zip=../../media/packs/cubemap.zip
+#Zip=../../media/packs/cubemapsJS.zip
+#Zip=../../media/packs/dragon.zip
+#Zip=../../media/packs/fresneldemo.zip
+#Zip=../../media/packs/ogretestmap.zip
+#Zip=../../media/packs/ogredance.zip
+#Zip=../../media/packs/Sinbad.zip
+#Zip=../../media/packs/skybox.zip
 
 [General]
 FileSystem=../../media
@@ -37,3 +43,19 @@ FileSystem=../../media
 # Materials for visual tests
 [Tests]
 FileSystem=../../media/../../Tests/Media
+
+#Stuff for CEGUI
+[Imagesets]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/imagesets
+FileSystem=./ressources/ui/images
+[Fonts]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/fonts
+[Schemes]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/schemes
+FileSystem=./ressources/ui/schemes
+[LookNFeel]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/looknfeel
+FileSystem=./ressources/ui/looknfeel
+[Layouts]
+FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/layouts
+FileSystem=./ressources/ui/layouts
