--- a/ressources/etc/win_resources_d.cfg
+++ b/ressources/etc/win_resources_d.cfg
@@ -27,6 +27,7 @@ FileSystem=./ressources/materials/
 FileSystem=./ressources/meshes/
 FileSystem=./ressources/particles/
 FileSystem=./ressources/textures/
+FileSystem=./ressources/fonts/
 #Zip=../../media/packs/cubemap.zip
 #Zip=../../media/packs/cubemapsJS.zip
 #Zip=../../media/packs/dragon.zip
@@ -46,11 +47,15 @@ FileSystem=../../media/../../Tests/Media
 #Stuff for CEGUI
 [Imagesets]
 FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/imagesets
+FileSystem=./ressources/ui/images
 [Fonts]
 FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/fonts
 [Schemes]
 FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/schemes
+FileSystem=./ressources/ui/schemes
 [LookNFeel]
 FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/looknfeel
+FileSystem=./ressources/ui/looknfeel
 [Layouts]
 FileSystem=D:/dev/ogre/CEGUI-0.7.9/datafiles/layouts
+FileSystem=./ressources/ui/layouts
